--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pokemon-search",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "private": true,
+  "homepage": "https://liztrenholme.github.io/pokemon-search",
   "dependencies": {
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
