--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "pokemon-search",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "private": true,
+  "author": {
+    "name": "liztrenholme.github.io"
+  },
   "homepage": "https://liztrenholme.github.io/pokemon-search",
   "dependencies": {
     "@babel/core": "7.12.3",
