--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokemon-search",
-  "version": "1.4.10",
+  "version": "1.5.0",
   "private": true,
   "author": {
     "name": "liztrenholme.github.io"
@@ -10,10 +10,6 @@
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "axios": "^0.25.0",
     "babel-eslint": "^10.1.0",
@@ -55,10 +51,10 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
-    "react": "^17.0.1",
+    "react": "18.3.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "18.3.1",
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
@@ -75,17 +71,30 @@
     "whatwg-fetch": "^3.6.2",
     "workbox-webpack-plugin": "5.1.4"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.6.1",
+    "@vitejs/plugin-react": "4.3.4",
+    "@vitest/coverage-v8": "3.0.5",
+    "jsdom": "^26.0.0",
+    "vite": "^6.0.7",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "3.0.5"
+  },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
